feat(front): Implementado la pagina home
